# ai-sub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml
config/: blogs.opml  sitemaps.yaml  youtube_channels.yaml
docs/: vendors.md
scripts/: send_digest.py
src/ai_sub/: config.py  digest_blog.py  digest_release.py  digest_youtube.py  filter_blog.py  filter_release.py  filter_youtube.py  llm.py  main.py  models.py  scheduler.py  store_blog.py  store_release.py  store_youtube.py  url.py
src/ai_sub/fetcher/: blog.py  releasebot.py  sitemap.py  youtube.py
src/ai_sub/notifier/: __init__.py  feishu.py  telegram.py  telegram_topics.py
