[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sub"
version = "0.1.0"
description = "AI Release Notification Service"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10,<4.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
ai-sub = "ai_sub.main:main"
